--- a/labs/lab6/lab.adoc
+++ b/labs/lab6/lab.adoc
@@ -194,4 +194,4 @@ Note the application name for next steps
 > cf delete wsattendees
 ----
 
-*** link:labs/lab7/lab.adoc[Binding your **.NET** ASP.NET MVC Application]
+*** link:/labs/lab7/lab.adoc[Binding your **.NET** ASP.NET MVC Application]
