--- a/README.adoc
+++ b/README.adoc
@@ -8,8 +8,8 @@ This workshop will provide developers and operators an indepth overview of Pivot
 *** link:prerequisites.adoc[** Setup Instructions **]
 9:00 AM - 10:30 AM::  Pushing, Binding Services & Scaling Apps with Pivotal Cloud Foundry
 10:30 AM - 10:45 AM:: Break
-10:45 AM - 12:00 PM:: Pivotal Cloud Foundry Architecture and Deep Dive
-11:15 AM - 12:15 PM:: Pushing Code with Pivotal Cloud Foundry
+10:45 AM - 11:15 PM:: Pivotal Cloud Foundry Architecture and Deep Dive
+11:15 AM - 12:00 PM:: Conversation about your Apps that you are planning to push to Cloud Foundry
 12:00 PM - 12:30 PM:: Lunch Break and Q&A
 12:30 PM - 4:30 PM::   Developer Focused Workshop Labs:
   * Bring your own app and push to Cloud Foundry
